--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ minima:
 
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
