Add theme plugin

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: jekyllrb
 github_username:  boringtechnology1
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 
 minima:
   skin: dark
@@ -46,12 +46,12 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
 #   - Gemfile
-#   - Gemfile.lock
+  - Gemfile.lock
 #   - node_modules/
 #   - vendor/bundle/
 #   - vendor/cache/
